# lang

./: .gitignore  .replit  CMakeLists.txt  README.md
runtime/: CMakeLists.txt
runtime/src/: string.cpp
src/: main.cpp
src/bytecode/: instruction.h
src/compiler/: compiler.cpp  compiler.h
src/compiler/cfg_builder/: cfg_builder.cpp  cfg_builder.h
src/compiler/code_gen/: code_gen.cpp  code_gen.h  function_collector.cpp  function_collector.h
src/compiler/ir/: ast.cpp  ast.h  cfg.h  types.h
src/compiler/ir/ast/: ast.cpp  ast.h  types.h
src/compiler/ir/cfg/: cfg.cpp  cfg.h  cfg_builder.cpp  cfg_builder.h
src/compiler/lexer/: lexeme.h  lexer.cpp  lexer.h
src/compiler/parser/: parser.cpp  parser.h
src/compiler/parser/passes/: function_collector.cpp  function_collector.h  pass.cpp  pass.h  symbol_collector.cpp  symbol_collector.h  type_analyzer.cpp  type_analyzer.h  variable_resolver.cpp  variable_resolver.h
src/compiler/parser/types/: types.h  value.h
src/compiler/utils/: error.cpp  error.h  exception.h  position.h
src/debug/: graphviz.cpp  graphviz.h
src/interpreter/: interpreter.cpp
src/runtime/: runtime.h
